--- a/dbconfiguration/dbconfigui.html
+++ b/dbconfiguration/dbconfigui.html
@@ -35,21 +35,21 @@
     <div>
         <div>
             <h6 style="color: grey">Database Configuration</h6>
-            <form onsubmit="oracle('hello')">
+            <form onsubmit="databaseConfiguration();return false;">
                 <div>
                     <div class="form-group row">
                         <div class="form-control col-sm-4 input-color relative">
                             <label class="form-check-label" for="oracle">Oracle</label>
-                            <input class="form-check-input text-right radio-right" id="oracle" type="radio" name="dbtype" value="oracle" required>
+                            <input class="form-check-input text-right radio-right" id="oracle" type="radio" name="dbtype" value="ORACLE" required>
                         </div>
                         <div class="form-control col-sm-4 input-color relative">
                             <label class="form-check-label" for="sqlserver">SqlServer</label>
-                            <input class="form-check-input text-right radio-right" id="sqlserver" type="radio" name="dbtype" value="sqlserver" required>
+                            <input class="form-check-input text-right radio-right" id="sqlserver" type="radio" name="dbtype" value="SQLSERVER" required>
                         </div>
-                        <div class="form-control col-sm-4 input-color relative">
+                        <!-- <div class="form-control col-sm-4 input-color relative">
                             <label class="form-check-label" for="mysql">MySql</label>
                             <input class="form-check-input text-right radio-right" id="mysql" type="radio" name="dbtype" value="mysql" required>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="form-group row">
                         <div class="col-sm-6">
