--- a/dbconfiguration/dbconfigui.html
+++ b/dbconfiguration/dbconfigui.html
@@ -12,6 +12,7 @@
 
     </div>
     <div class="container">
+            <div class="card">
         <div>
             <h5 style="color: #3060aa; text-align: center; padding: 10px">Midtables Configuration</h5>
         </div>
@@ -69,28 +70,27 @@
                         <div>
                             <div class="form-group row">
                                 <div class="col-sm-4">
-                                    <select class="form-control input-color" id="payerSelect">
+                                    <select class="form-control select-bg" id="payerSelect">
                                         <option selected name="Select Payer" value="Select Payer">Select Payer</option>
-                                        <option>1</option>
+                                        <!-- <option>1</option>
                                         <option>2</option>
-                                        <option>3</option>
+                                        <option>3</option> -->
                                     </select>
                                 </div>
                                 <div class="col-sm-8">
-                                    <input class="form-control" id="payer" type="text" placeholder="NCCI" />
+                                    <input class="form-control" id="payer" type="text" placeholder="TSH" />
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-4">
-                                    <select class="form-control input-color">
+                                    <select class="form-control select-bg">
                                         <option selected name="Claim Type" value="Claim Type">Claim Type</option>
-                                        <option>1</option>
-                                        <option>2</option>
-                                        <option>3</option>
+                                        <option value="INPATIENT">INPATIENT</option>
+                                        <option value="OUTPATIENT">OUTPATIENT</option>
                                     </select>
                                 </div>
                                 <div class="col-sm-8">
-                                    <input class="form-control" id="claimtype" type="text" placeholder="IP" />
+                                    <input class="form-control" id="claimtype" type="text" placeholder="Claim Type(ex: IP)" />
                                 </div>
                             </div>
                         </div>
@@ -102,13 +102,27 @@
             </div>
         </div>
     </div>
-    <script src="../environment.js"></script>
+    </div>
     <script src="dbconfig.js"></script>
     <script src="../dbConnection.js"></script>
     <script>
         $(function () {
             $("#nav-placeholder").load("../home/page.html");
+            var jwt_decode = require('jwt-decode')
+            var token = localStorage.getItem('access_token');
+            var decoded = jwt_decode(token);
+            let decodepayers = decoded.payers;
+            let payers = [];
+            for (let payerid in decodepayers) {
+                payers.push({ id: `${payerid}`, name: `${decodepayers[payerid]}` })
+            }
+            var selectList = document.getElementById('payerSelect');
+            for (var i = 0; i < payers.length; i++) {
+                var option = document.createElement("option");
+                option.value = payers[i].id;
+                option.text = payers[i].name.split(',')[0];
+                selectList.appendChild(option);
+            }
         });
-                
     </script>
 </body>
