--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <script src="extraction.js"></script>
-    <script src="../dbConnection.js"></script>
+    <!-- <script src="../dbConnection.js"></script> -->
     <script>
         $(function () {
             $("#nav-placeholder").load("../home/page.html");
