--- a/home/page.html
+++ b/home/page.html
@@ -16,7 +16,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#" onclick="connect()">Link 1</a>
+            <a class="nav-link" href="../dbconfiguration/dbconfigui.html">Configuration</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="../extraction/extractionui.html">Extract</a>
