--- a/dbconfiguration/dbconfigui.html
+++ b/dbconfiguration/dbconfigui.html
@@ -77,8 +77,8 @@
                             <div>
                                 <div class="form-group row">
                                     <div class="col-sm-4">
-                                        <select class="form-control select-bg" id="payerSelect">
-                                            <option selected name="Select Payer" value="Select Payer">Select Payer
+                                        <select class="form-control select-bg" id="payerSelect" required>
+                                            <option selected name="Select Payer" value="">Select Payer
                                             </option>
                                             <!-- <option>1</option>
                                         <option>2</option>
@@ -86,20 +86,20 @@
                                         </select>
                                     </div>
                                     <div class="col-sm-8">
-                                        <input class="form-control" id="payer" type="text" placeholder="TSH" />
+                                        <input class="form-control" id="payer" type="text" placeholder="Payer Name(ex:TSH)" required/>
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-4">
-                                        <select class="form-control select-bg" id="claim_name">
-                                            <option selected name="Claim Type" value="Claim Type">Claim Type</option>
+                                        <select class="form-control select-bg" id="claim_name" required>
+                                            <option selected name="Claim Type" value="">Claim Type</option>
                                             <option value="INPATIENT">INPATIENT</option>
                                             <option value="OUTPATIENT">OUTPATIENT</option>
                                         </select>
                                     </div>
                                     <div class="col-sm-8">
                                         <input class="form-control" id="claimtype" type="text"
-                                            placeholder="Claim Type(ex: IP)" />
+                                            placeholder="Claim Type(ex: IP)" required/>
                                     </div>
                                 </div>
                             </div>
