--- a/home/page.html
+++ b/home/page.html
@@ -31,6 +31,8 @@
 <script>
     function logout(){
     localStorage.removeItem('access_token');
+    localStorage.removeItem('provider_id');
+    
     window.location.href = "../login/loginui.html";
 }
 </script>
