--- a/dbconfiguration/dbconfigui.html
+++ b/dbconfiguration/dbconfigui.html
@@ -26,15 +26,13 @@
                                 <div class="col-sm-6">
                                     <div class="form-control radio-bg">
                                         <label class="form-check-label" for="oracle">Oracle</label>
-                                        <input class="form-check-input text-right radio-right" id="oracle" type="radio"
-                                            name="dbtype" value="Oracle" required>
+                                        <input class="form-check-input text-right radio-right" id="oracle" type="radio" name="dbtype" value="Oracle" required checked="checked">
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-control radio-bg">
                                         <label class="form-check-label" for="sqlserver">SqlServer</label>
-                                        <input class="form-check-input text-right radio-right" id="sqlserver"
-                                            type="radio" name="dbtype" value="SqlServer" required>
+                                        <input class="form-check-input text-right radio-right" id="sqlserver" type="radio" name="dbtype" value="SqlServer" required>
                                     </div>
                                 </div>
                                 <!-- <div class="form-control col-sm-4 input-color relative">
@@ -44,26 +42,26 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6">
-                                    <input class="form-control" type="text" id="ip" placeholder="HostName/IP"
-                                        required />
+                                    <input class="form-control" type="text" id="ip" placeholder="HostName/IP *" required oninvalid="this.setCustomValidity('Please provide a HostName')"
+                                        oninput="setCustomValidity('')" />
                                 </div>
                                 <div class="col-sm-2">
-                                    <input class="form-control" type="text" id="port" placeholder="port"
-                                        required />
+                                    <input class="form-control" type="text" id="port" placeholder="port *" required oninvalid="this.setCustomValidity('Please provide a port number')"
+                                        oninput="setCustomValidity('')" />
                                 </div>
                                 <div class="col-sm-4">
-                                    <input class="form-control" type="text" id="database" placeholder="DatabaseName/SID"
-                                        required />
+                                    <input class="form-control" type="text" id="database" placeholder="DatabaseName/SID *" required oninvalid="this.setCustomValidity('Please provide the database name')"
+                                        oninput="setCustomValidity('')" />
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6">
-                                    <input class="form-control" id="username" type="text" placeholder="Username"
-                                        required />
+                                    <input class="form-control" id="username" type="text" placeholder="Username *" required oninvalid="this.setCustomValidity('Please provide a user name')"
+                                        oninput="setCustomValidity('')" />
                                 </div>
                                 <div class="col-sm-6">
-                                    <input class="form-control" id="password" type="password" placeholder="Password"
-                                        required />
+                                    <input class="form-control" id="password" type="password" placeholder="Password *" required oninvalid="this.setCustomValidity('Please provide a password')"
+                                        oninput="setCustomValidity('')" />
                                 </div>
                             </div>
                             <div style="display: none;" id="databaseError" class="errorArea">
@@ -86,7 +84,8 @@
                                         </select>
                                     </div>
                                     <div class="col-sm-8">
-                                        <input class="form-control" id="payer" type="text" placeholder="Payer Name(ex:TSH)" required/>
+                                        <input class="form-control" id="payer" type="text" placeholder="Payer Name(ex:TSH) *" required oninvalid="this.setCustomValidity('Please provide the extraction payer name')"
+                                            oninput="setCustomValidity('')" />
                                     </div>
                                 </div>
                                 <div class="form-group row">
@@ -98,8 +97,8 @@
                                         </select>
                                     </div>
                                     <div class="col-sm-8">
-                                        <input class="form-control" id="claimtype" type="text"
-                                            placeholder="Claim Type(ex: IP)" required/>
+                                        <input class="form-control" id="claimtype" type="text" placeholder="Claim Type(ex: Inpatient) *" required oninvalid="this.setCustomValidity('Please provide the extraction claim name')"
+                                            oninput="setCustomValidity('')" />
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +118,7 @@
             var jwt_decode = require('jwt-decode')
             var token = localStorage.getItem('access_token');
             var decoded = jwt_decode(token);
-            
+
             localStorage.setItem("provider_id", decoded.prov_id)
             let decodepayers = decoded.payers;
             let payers = [];
