--- a/home/page.html
+++ b/home/page.html
@@ -15,7 +15,7 @@
 
     <!-- Links -->
     <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="../dbconfiguration/dbconfigui.html">Configuration</a>
         </li>
         <li class="nav-item">
