--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -52,20 +52,17 @@
                     </div>
                 </div>
             </form>
+            <div style="display: none;" id="summary-container">
+                <hr>
+                <div>
+                    <table id="summary-table" class="table table-sm table-borderles"></table>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="container" style="display: none;" id="summary-container">
-        <div class="card">
-            <div>
-                <h5 style="color: #3060aa; text-align: center; padding: 10px">Extract Claims</h5>
-            </div>
-            <hr>
-            <div>
-                <table id="summary-table" class="table"></table>
-            </div>
-            <div style="display: none;" id="summary-error">
+    <div class="container">
+        <div class="card" style="display: none;" id="summary-error">
 
-            </div>
         </div>
     </div>
     <script src="extraction.js"></script>
