--- a/login/loginui.html
+++ b/login/loginui.html
@@ -58,5 +58,5 @@
     </div>
 
     <script src="login.js"></script>
-    <script src="autoupdater/autoupdater_frontend.js"></script>
+    <script src="../autoupdater/autoupdater_frontend.js"></script>
 </body>
