set desktop icon

--- a/login/loginui.html
+++ b/login/loginui.html
@@ -51,8 +51,8 @@
         <div id="upnotification">
             <div id="notification" class="hidden">
                 <p id="message"></p>
-                <button id="close-button" onClick="closeNotification()">Close</button>
-                <button id="restart-button" onClick="restartApp()" class="hidden">Restart</button>
+                <button class="btn btn-signin" id="close-button" onClick="closeNotification()">Close</button>
+                <button id="restart-button" onClick="restartApp()" class="btn btn-signin hidden">Restart</button>
             </div>
         </div>
     </div>
