design change in claim response

--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -55,7 +55,72 @@
             <div style="display: none;" id="summary-container">
                 <hr>
                 <div>
-                    <table id="summary-table" class="table table-sm table-borderles"></table>
+                    <div class="row">
+                        <div class="col-sm-4" id="uploadSummaryID" style="margin: 0.5% -2% 0.5% 2%;">
+                            Upload Summary Id  :  
+                        </div>
+                        <div class="col-sm-4" id="noOfUploadedClaims" style="margin: 0.5% 0px;">
+                            No of Uploaded Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="noOfNotUploadedClaims" style="margin: 0.5% 0px;">
+                            No of not Uploaded Claims  :  
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4" id="noOfAcceptedClaims" style="margin: 0.5% -2% 0.5% 2%;">
+                            No of Accepted Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="noOfNotAcceptedClaims" style="margin: 0.5% 0px;">
+                            No of Not Accepted Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="noOfDownloadableClaims" style="margin: 0.5% 0px;">
+                            No of Downloadable Claims  :  
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4" id="netAmountOfUploadedClaims" style="margin: 0.5% -2% 0.5% 2%;">
+                            Net Amount of Uploaded Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="netVATAmountOfUploadedClaims" style="margin: 0.5% 0px;">
+                            Net VAT Amount of Uploaded Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="netAmountOfAcceptedClaims" style="margin: 0.5% 0px;">
+                            Net Amount of Accepted Claims  :  
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4" id="netVATAmountOfAcceptedClaims" style="margin: 0.5% -2% 0.5% 2%;">
+                            Net VAT Amount of Accepted Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="netAmountOfNotAcceptedClaims" style="margin: 0.5% 0px;">
+                            Net Amount of Not Accepted Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="netVATAmountOfNotAcceptedClaims" style="margin: 0.5% 0px;">
+                            Net VAT Amount of Not Accepted Claims  :  
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4" id="netAmountOfDownloadableClaims" style="margin: 0.5% -2% 0.5% 2%;">
+                            Net Amount of Downloadable Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="netVATAmountOfDownloadableClaims" style="margin: 0.5% 0px;">
+                            Net VAT Amount of Downloadable Claims  :  
+                        </div>
+                        <div class="col-sm-4" id="message" style="margin: 0.5% 0px;">
+                            Message  :  
+                        </div>    
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4" id="uploadName" style="margin: 0.5% -2% 0.5% 2%;">
+                            Upload Name  :  
+                        </div>
+                        <div class="col-sm-4" id="uploadDate" style="margin: 0.5% 0px;">
+                            Upload Date  :  
+                        </div>
+                        <div class="col-sm-4" id="" style="margin: 0.5% 0px;">
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
