mysql connection and error configuration

--- a/dbconfiguration/dbconfigui.html
+++ b/dbconfiguration/dbconfigui.html
@@ -23,16 +23,22 @@
                     <form onsubmit="databaseConfiguration();return false;">
                         <div>
                             <div class="form-group row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-4">
                                     <div class="form-control radio-bg">
                                         <label class="form-check-label" for="oracle">Oracle</label>
                                         <input class="form-check-input text-right radio-right" id="oracle" type="radio" name="dbtype" value="Oracle" required checked="checked">
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
+                                <div class="col-sm-4">
                                     <div class="form-control radio-bg">
                                         <label class="form-check-label" for="sqlserver">SqlServer</label>
                                         <input class="form-check-input text-right radio-right" id="sqlserver" type="radio" name="dbtype" value="SqlServer" required>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="form-control radio-bg">
+                                        <label class="form-check-label" for="sqlserver">MySql</label>
+                                        <input class="form-check-input text-right radio-right" id="mysql" type="radio" name="dbtype" value="MySql" required>
                                     </div>
                                 </div>
                                 <!-- <div class="form-control col-sm-4 input-color relative">
