update urls and validate token.

--- a/home/page.html
+++ b/home/page.html
@@ -32,8 +32,9 @@
     function logout(){
     localStorage.removeItem('access_token');
     localStorage.removeItem('provider_id');
-    
+    localStorage.removeItem('expire_time');
     window.location.href = "../login/loginui.html";
-}
+    }
+    
 </script>
 </html>
