--- a/login/loginui.html
+++ b/login/loginui.html
@@ -12,7 +12,7 @@
             <!-- Icon -->
             <p id="version"></p>
             <img src="../images/waseel_logo_Dark_Blue.png" class="profile-img-card" id="icon" alt="Logo" />
-            <div class="card-body">
+            <div class="card-body" id="login-card">
                 <form class="form-signin" onsubmit="callLogin();return false">
                     <div class="form-group row">
                         <div class="col-sm-12">
@@ -43,16 +43,15 @@
                     </div>
                     <br/>
                     <div class="form-group row">
-                        <button type="submit" class="btn btn-lg btn-primary btn-block btn-signin">Sign In</button>
+                        <button type="submit" id="login-button" class="btn btn-lg btn-primary btn-block btn-signin">Sign In</button>
                     </div>
                 </form>
             </div>
-        </div>
-        <div id="upnotification">
-            <div id="notification" class="hidden">
-                <p id="message"></p>
-                <button class="btn btn-signin" id="close-button" onClick="closeNotification()">Close</button>
-                <button id="restart-button" onClick="restartApp()" class="btn btn-signin hidden">Restart</button>
+            <div id="upnotification">
+                <div id="notification" class="hidden">
+                    <p id="message"></p>
+                    <button id="restart-button" onClick="restartApp()" class="btn btn-signin hidden">Restart</button>
+                </div>
             </div>
         </div>
     </div>
