--- a/dbconfiguration/dbconfigui.html
+++ b/dbconfiguration/dbconfigui.html
@@ -17,28 +17,41 @@
                 <h5 style="color: #3060aa; text-align: center; padding: 10px">Midtables Configuration</h5>
             </div>
             <hr>
+            <div style="background-color: rgb(248,213,212);padding-top: 15px;margin-bottom: 10px;border-radius: 5px;color: rgb(188,75,71);font-size: 13px;font-weight: 500;overflow: auto;max-height: 100px;display: none;"
+                id="error-block">
+                <ul id="db-errors">
+                </ul>
+            </div>
+            <div style="background-color: peachpuff;padding-top: 15px;margin-bottom: 10px;border-radius: 5px;color: rgb(188,75,71);font-size: 13px;font-weight: 500;overflow: auto;max-height: 100px;display: none;"
+                id="warning-block">
+                <ul id="db-warnings">
+                </ul>
+            </div>
             <div>
                 <div>
                     <h6 style="color: grey">Database Configuration</h6>
-                    <form onsubmit="databaseConfiguration();return false;">
+                    <form>
                         <div>
                             <div class="form-group row">
                                 <div class="col-sm-4">
                                     <div class="form-control radio-bg">
                                         <label class="form-check-label" for="oracle">Oracle</label>
-                                        <input class="form-check-input text-right radio-right" id="oracle" type="radio" name="dbtype" value="Oracle" required checked="checked">
+                                        <input class="form-check-input text-right radio-right" id="oracle" type="radio"
+                                            name="dbtype" value="ORACLE" required checked="checked" disabled>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-control radio-bg">
                                         <label class="form-check-label" for="sqlserver">SqlServer</label>
-                                        <input class="form-check-input text-right radio-right" id="sqlserver" type="radio" name="dbtype" value="SqlServer" required>
+                                        <input class="form-check-input text-right radio-right" id="sqlserver"
+                                            type="radio" name="dbtype" value="SQLSERVER" required disabled>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-control radio-bg">
                                         <label class="form-check-label" for="sqlserver">MySql</label>
-                                        <input class="form-check-input text-right radio-right" id="mysql" type="radio" name="dbtype" value="MySql" required>
+                                        <input class="form-check-input text-right radio-right" id="mysql" type="radio"
+                                            name="dbtype" value="MYSQL" required disabled>
                                     </div>
                                 </div>
                                 <!-- <div class="form-control col-sm-4 input-color relative">
@@ -48,30 +61,27 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6">
-                                    <input class="form-control" type="text" id="ip" placeholder="HostName/IP *" required oninvalid="this.setCustomValidity('Please provide a HostName')"
-                                        oninput="setCustomValidity('')" />
+                                    <input class="form-control" type="text" id="ip" placeholder="HostName/IP *" required
+                                        disabled />
                                 </div>
                                 <div class="col-sm-2">
-                                    <input class="form-control" type="text" id="port" placeholder="port *" required oninvalid="this.setCustomValidity('Please provide a port number')"
-                                        oninput="setCustomValidity('')" />
+                                    <input class="form-control" type="text" id="port" placeholder="port *" required
+                                        disabled />
                                 </div>
                                 <div class="col-sm-4">
-                                    <input class="form-control" type="text" id="database" placeholder="DatabaseName/SID *" required oninvalid="this.setCustomValidity('Please provide the database name')"
-                                        oninput="setCustomValidity('')" />
+                                    <input class="form-control" type="text" id="database"
+                                        placeholder="DatabaseName/SID *" required disabled />
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6">
-                                    <input class="form-control" id="username" type="text" placeholder="Username *" required oninvalid="this.setCustomValidity('Please provide a user name')"
-                                        oninput="setCustomValidity('')" />
+                                    <input class="form-control" id="username" type="text" placeholder="Username *"
+                                        required disabled />
                                 </div>
                                 <div class="col-sm-6">
-                                    <input class="form-control" id="password" type="password" placeholder="Password *" required oninvalid="this.setCustomValidity('Please provide a password')"
-                                        oninput="setCustomValidity('')" />
+                                    <input class="form-control" id="password" type="password" placeholder="Password *"
+                                        disabled />
                                 </div>
-                            </div>
-                            <div style="display: none;" id="databaseError" class="errorArea">
-                                <p id="databaseErrorMessage"></p>
                             </div>
                         </div>
                         <div>
@@ -81,7 +91,7 @@
                             <div>
                                 <div class="form-group row">
                                     <div class="col-sm-4">
-                                        <select class="form-control select-bg" id="payerSelect" required onchange="changePayerMappingValue()">
+                                        <select class="form-control select-bg" id="payerSelect" required>
                                             <option selected name="Select Payer" value="">Select Payer
                                             </option>
                                             <!-- <option>1</option>
@@ -90,34 +100,36 @@
                                         </select>
                                     </div>
                                     <div class="col-sm-8">
-                                        <input class="form-control" id="payer" type="text" placeholder="Payer Name(ex:TSH) *" required oninvalid="this.setCustomValidity('Please provide the extraction payer name')"
-                                            oninput="setCustomValidity('')" />
+                                        <input class="form-control" id="payer" type="text"
+                                            placeholder="Payer Name(ex:TSH) *" required />
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-4">
-                                        <select class="form-control select-bg" id="claim_name" required onchange="changeClaimMappingValue()">
+                                        <select class="form-control select-bg" id="claim_name" required>
                                             <option selected name="Claim Type" value="">Claim Type</option>
                                             <option value="INPATIENT">INPATIENT</option>
                                             <option value="OUTPATIENT">OUTPATIENT</option>
                                         </select>
                                     </div>
                                     <div class="col-sm-8">
-                                        <input class="form-control" id="claimtype" type="text" placeholder="Claim Type(ex: Inpatient) *" required oninvalid="this.setCustomValidity('Please provide the extraction claim name')"
-                                            oninput="setCustomValidity('')" />
+                                        <input class="form-control" id="claimtype" type="text"
+                                            placeholder="Claim Type(ex: Inpatient) * " required />
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group text-right" style="padding-top: 1.5rem">
-                            <button type="submit" class="btn btn-primary btn-signin" id="save-config-button">Save</button>
-                        </div>
                     </form>
+                    <div class="text-right" style="padding-top: 1.5rem">
+                        <button onclick="refresh()" class="btn btn-primary btn-signin" id="save-config-button">Refresh &
+                            Test</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <script src="dbconfig.js"></script>
+    <script src="dbValidation.js"></script>
     <script>
         $(function () {
             $("#nav-placeholder").load("../home/page.html");
